Fixed Responsiveness on Tablet

--- a/src/components/nav/Nav.css
+++ b/src/components/nav/Nav.css
@@ -15,8 +15,8 @@ ul {
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.15);
 }
 .nav {
-  display: grid;
-  grid-template-columns: 3fr 5fr 4fr;
+  display: flex;
+
   justify-content: space-between;
   align-items: center;
 }
@@ -28,7 +28,6 @@ ul {
 }
 .nav__search-container > input {
   background-color: var(--background-color);
-
   border: 1px solid grey;
   border-right: none;
   padding: 8px 20px;
@@ -69,8 +68,41 @@ ul {
   transform: scale(1.08);
   transition-duration: 0.1s;
 }
-@media screen and (max-width: 800px) {
+
+/* Styles for mobile (portrait) and below */
+@media screen and (width<= 768px) {
+  body {
+    font-size: 14px;
+  }
   .nav__search-container {
     display: none;
+  }
+  .product-category-container {
+    grid-template-columns: 1fr;
+  }
+}
+
+/* Styles for tab (portrait) and up */
+@media screen and (width<= 1024px) {
+  body {
+    font-size: 16px;
+  }
+
+  .nav__search-container {
+    display: none;
+  }
+  .product-category-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+/* Styles for Laptop and up */
+@media screen and (width>= 1024px) {
+  body {
+    font-size: 18px;
+  }
+
+  .product-category-container {
+    grid-template-columns: repeat(4, 1fr);
   }
 }
